  - No idea how to import from old versions, so old location data will be lost
- Some more minor changes
  - Fixed Chatframe notifications for hate/nice list. It will now display
    "(hated)" or "(liked)" after a player name.
    - Previous method of just coloring the name doesn't work because it's
      overriden by class colors
  -  Fixed InCity() call
  - Style cleanup
  - Lots of other things

4.50:
- Use LibDialog rather than vanilla StaticPopup [ticket #78]
- Remove modules_old
- Update LibSharedMedia library to trunk
- Fixed some bugs in the command line handler
- Compatibility for 8.0.1 
  - disabled some modules that would need extensive rework 
    (eventmap, distributed tracking, friends frame docking, importer, other modules too, may not work)

4.49:
- Update toc and libraries

4.48:
- Fixed own name from appearing in warning frame
- Fixed coloring of warning frame in and out of combat
- Updated POI icons for death, and tie
- Fixed minor localization problems
- Fixed libraries in .pkgmeta

4.47:
- Updated database to use Map Area IDs rather than zone text
- Remove obsolete Import code
- Fix bug not adding PvP events to map [ticket #74]
- Remove LFR Browser, fixes tainting when joining casual BGs [ticket #76]
- Don't send Chat messages from DistributedTracker while AFK [ticket #73]
- Update libraries

4.46:
- toc updated

4.45:
- Integrated fixes for 5.2 by Unrealomega

4.44:
- Updated Libraries

4.43:
- toc fix

4.42:
- Fix for Monks

4.41:
- Bugfix

4.40:
- Updated TOC and fixed some global leakage

4.33:
- Fixed bug friends frame docking

4.32:
- Update toc version for 4.3
- Update libraries
- Fixed bug in hatelist/nicelist chat coloring [ticket #62]
- Fixed bug restoring the saved warning window position
- Added option to change alignment in warning window
- Use guid hyperlink in gametooltip used by the warning window
- Fix bug toggling warning window active state

4.31:
- Update libraries